# spinodoidTopologyOptimization

./: .gitignore  instructions.md  opencode.json  problem.txt  problem_checker_results.md
.claude/: settings.local.json
matlab_framework/: FEBioConvergenceAnalysis.m  FEMThreePointBending.m  Homogenization.m  compareNumericalExperimental.m  dlnetF.mat  dlnetI.mat  exported_weights.mat  masterPipeline.m  mirrorHalfStructure.m  optimizeTopology.m  plotTransitionProperties.m  postProcessFEM.m  renderSpinodoidStructure.m  runExplicitFEM.m  scaleTopOptOutputs.m  setupFEM.m  snapToValidRanges.m  spinodoid-test.csv  spinodoid-train.csv  spinodoidExecutor.m  trainNeuralNetworks.m
python_framework/: LICENSE  README.md  pyproject.toml
python_framework/src/spinodoid_surrogate/: __init__.py  config.py  data.py  metrics.py  models.py
python_framework/src/spinodoid_surrogate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
